# oligocalc

./: coefficients.xlsx  mass.xlsx  pyproject.toml
oligocalc/: __main__.py
