[tool.poetry]
name = "oligocalc"
version = "0.1.0"
description = ""
authors = ["NoguchiRyo <noguchi-ryo000@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oligocalc = "oligocalc.__main__:main"